--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "herself-health",
   "version": "0.1.0",
-  "homepage": "https://seemo66.github.io/herself-health",
+  "homepage": "https://seemo66.github.io/herself-health-landing-v2",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.8.0",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "13.5.0",
-    "gh-pages": "6.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
@@ -43,6 +42,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.12",
     "autoprefixer": "10.4.21",
+    "gh-pages": "6.3.0",
     "postcss": "8.5.6",
     "tailwindcss": "3.4.17"
   }
